--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -2,8 +2,9 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Dzień dobry :-)</h1>
 
-Welcome to your new app.
+Martyna Toczyska<br />
+nr albumu: 112785
 
 <SurveyPrompt Title="How is Blazor working for you?" />
