--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -4,7 +4,7 @@
 
 <h1>Dzień dobry :-)</h1>
 
-Martyna Toczyska<br />
-nr albumu: 112785
+<b>Mam na imię:</b> Martyna Toczyska<br />
+<b>Mój nr albumu:</b> 112785<br />
 
-<SurveyPrompt Title="How is Blazor working for you?" />
+
